# pico-dualsense

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/pico_dualsense/: dualsense_hci.h  dualsense_l2cap.h  dualsense_parser.h  dualsense_report.h  pico_dualsense.h
src/: btstack_config.h  dualsense_hci.cpp  dualsense_l2cap.cpp  dualsense_parser.cpp  pico_dualsense.cpp
